Updates from Overleaf

--- a/Preamble/config.tex
+++ b/Preamble/config.tex
@@ -47,3 +47,7 @@
 \newtheorem{proposicao}{Proposição}[chapter]
 \newtheorem{col}{Corolário}[chapter]
 \theoremstyle{remark}\newtheorem{obs}{Observação}[chapter]
+
+% \usepackage{polyglossia}
+% \usepackage{fontspec}
+\usepackage{ebgaramond-maths}
