--- a/thesis.tex
+++ b/thesis.tex
@@ -1,7 +1,7 @@
 % ******************************* UnB - Departamento de Matemática **************************
 % Por favor, dê uma olhada no arquivo LEIAME.md para mais informações sobre como usar o template
 
-\documentclass[a4paper,12pt,times,numbered,index, print]{PhDThesisPSnPDF}
+\documentclass[a4paper,12pt,numbered,index,print]{PhDThesisPSnPDF}
 
 % ******************************************************************************
 % ******************************* Opções Comuns ********************************
